// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButton > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_2_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_2_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_7_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_7_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders correctly medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_medium__m5izgx1 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_d_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_d_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_i_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_i_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders correctly with children changing 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_13_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_13_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_18_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_18_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders correctly with right value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_o_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_o_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_t_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_t_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_neutral__m5izgx7 styles__m5izgx6"
        style="left: 0px; width: 100px;"
      />
      <div
        class="styles__m5izgx5 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_24_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_24_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx5 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_29_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_29_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders with disabled and tooltip on SwitchButton.Option 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_1n_"
      aria-describedby="_r_1n_"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <div
        class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      >
        <div
          class="styles_primary__m5izgx8 styles__m5izgx6"
          style="left: 0px; width: 100px;"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
          style="--_4k0ekn3: 1;"
        >
          <div
            aria-controls="_r_1o_"
            aria-describedby="_r_1o_"
            class="styles__w40vpo9 styles_fullHeight_true__w40vpoa"
            tabindex="0"
          >
            <div
              class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              data-checked="true"
              data-disabled="true"
              data-testid="switch-button-left"
              data-type="radio"
              role="button"
              style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
            >
              <div
                class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              >
                <div
                  aria-disabled="true"
                  class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
                  data-checked="true"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="true"
                    checked=""
                    class="styles__17da2jla"
                    disabled=""
                    id="_r_1p_"
                    name="test"
                    tabindex="-1"
                    type="radio"
                    value="left"
                  />
                  <svg
                    class="styles__17da2jlb"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="styles__17da2jle"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="styles__17da2jld"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="styles__17da2jlc"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_1p_"
                  >
                    Left
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="styles__17da2jla"
                id="_r_1u_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                for="_r_1u_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders with icons 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_2d_"
      aria-describedby="_r_2d_"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <div
        class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      >
        <div
          class="styles_primary__m5izgx8 styles__m5izgx6"
          style="left: 0px; width: 100px;"
        />
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="true"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="true"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                checked=""
                class="styles__17da2jla"
                id="_r_2f_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles__17da2jl9 styles__17da2jl8"
                for="_r_2f_"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    MoonIcon
                  </title>
                  <path
                    d="M14.9543 10.6781C15.1672 10.2014 14.5937 9.79573 14.1149 10.0038C13.3621 10.3309 12.5313 10.5123 11.6581 10.5123C8.25024 10.5123 5.48762 7.74964 5.48762 4.34178C5.48762 3.46865 5.66897 2.63787 5.99605 1.88507C6.20408 1.40628 5.79836 0.832829 5.32171 1.0457C2.77491 2.1831 1 4.73805 1 7.70756C1 11.735 4.26491 14.9999 8.29238 14.9999C11.2619 14.9999 13.8169 13.225 14.9543 10.6781Z"
                  />
                </svg>
              </label>
            </div>
          </div>
        </div>
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="styles__17da2jla"
                id="_r_2j_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles__17da2jl9 styles__17da2jl8"
                for="_r_2j_"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    SunIcon
                  </title>
                  <path
                    d="M8 1C8.414 1 8.75 1.336 8.75 1.75V3.25C8.75 3.664 8.414 4 8 4 7.586 4 7.25 3.664 7.25 3.25V1.75C7.25 1.336 7.586 1 8 1ZM10.5 8C10.5 9.381 9.381 10.5 8 10.5 6.619 10.5 5.5 9.381 5.5 8 5.5 6.619 6.619 5.5 8 5.5 9.381 5.5 10.5 6.619 10.5 8ZM12.95 4.111C13.243 3.818 13.243 3.343 12.95 3.05 12.657 2.757 12.182 2.757 11.889 3.05L10.828 4.111C10.536 4.404 10.536 4.879 10.828 5.172 11.121 5.464 11.596 5.464 11.889 5.172L12.95 4.111ZM15 8C15 8.414 14.664 8.75 14.25 8.75H12.75C12.336 8.75 12 8.414 12 8 12 7.586 12.336 7.25 12.75 7.25H14.25C14.664 7.25 15 7.586 15 8ZM11.889 12.95C12.182 13.243 12.657 13.243 12.95 12.95 13.243 12.657 13.243 12.182 12.95 11.889L11.889 10.828C11.596 10.536 11.121 10.536 10.829 10.828 10.536 11.121 10.536 11.596 10.829 11.889L11.889 12.95ZM8 12C8.414 12 8.75 12.336 8.75 12.75V14.25C8.75 14.664 8.414 15 8 15 7.586 15 7.25 14.664 7.25 14.25V12.75C7.25 12.336 7.586 12 8 12ZM5.172 11.889C5.464 11.596 5.464 11.121 5.172 10.828 4.879 10.536 4.404 10.536 4.111 10.828L3.05 11.889C2.757 12.182 2.757 12.657 3.05 12.95 3.343 13.243 3.818 13.243 4.111 12.95L5.172 11.889ZM4 8C4 8.414 3.664 8.75 3.25 8.75H1.75C1.336 8.75 1 8.414 1 8 1 7.586 1.336 7.25 1.75 7.25H3.25C3.664 7.25 4 7.586 4 8ZM4.111 5.172C4.404 5.464 4.879 5.464 5.172 5.172 5.464 4.879 5.464 4.404 5.172 4.111L4.111 3.05C3.818 2.757 3.343 2.757 3.05 3.05 2.757 3.343 2.757 3.818 3.05 4.111L4.111 5.172Z"
                  />
                </svg>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_1c_"
      aria-describedby="_r_1c_"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <div
        class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
      >
        <div
          class="styles_primary__m5izgx8 styles__m5izgx6"
          style="left: 0px; width: 100px;"
        />
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="true"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="true"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                checked=""
                class="styles__17da2jla"
                id="_r_1e_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                for="_r_1e_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="styles__17da2jla"
                id="_r_1j_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                for="_r_1j_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
